@@ -6,11 +6,14 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseBodyEmitter;
 import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBody;
+import ru.magnit.magreportbackend.domain.filtertemplate.FilterFieldTypeEnum;
 import ru.magnit.magreportbackend.domain.filtertemplate.FilterTypeEnum;
+import ru.magnit.magreportbackend.domain.folderreport.FolderAuthorityEnum;
 import ru.magnit.magreportbackend.domain.reportjob.ReportJobStatusEnum;
 import ru.magnit.magreportbackend.domain.reportjob.ReportJobUserTypeEnum;
 import ru.magnit.magreportbackend.domain.user.SystemRoles;
 import ru.magnit.magreportbackend.dto.inner.RoleView;
+import ru.magnit.magreportbackend.dto.request.report.ReportIdRequest;
 import ru.magnit.magreportbackend.dto.request.reportjob.ExcelReportRequest;
 import ru.magnit.magreportbackend.dto.request.reportjob.ReportJobAddRequest;
 import ru.magnit.magreportbackend.dto.request.reportjob.ReportJobCommentRequest;
@@ -19,6 +22,7 @@ import ru.magnit.magreportbackend.dto.request.reportjob.ReportJobHistoryRequestF
 import ru.magnit.magreportbackend.dto.request.reportjob.ReportJobRequest;
 import ru.magnit.magreportbackend.dto.request.reportjob.ReportJobShareRequest;
 import ru.magnit.magreportbackend.dto.request.reportjob.ReportPageRequest;
+import ru.magnit.magreportbackend.dto.response.filterreport.FilterReportFieldResponse;
 import ru.magnit.magreportbackend.dto.response.filterreport.FilterReportResponse;
 import ru.magnit.magreportbackend.dto.response.report.ReportJobFilterResponse;
 import ru.magnit.magreportbackend.dto.response.report.ReportResponse;
@@ -29,7 +33,10 @@ import ru.magnit.magreportbackend.dto.response.reportjob.ReportPageResponse;
 import ru.magnit.magreportbackend.dto.response.reportjob.ReportSqlQueryResponse;
 import ru.magnit.magreportbackend.dto.response.reportjob.ScheduledReportResponse;
 import ru.magnit.magreportbackend.dto.response.reportjob.TokenResponse;
+import ru.magnit.magreportbackend.dto.response.user.RoleResponse;
 import ru.magnit.magreportbackend.dto.response.user.UserResponse;
+import ru.magnit.magreportbackend.dto.tuple.Tuple;
+import ru.magnit.magreportbackend.dto.tuple.TupleValue;
 import ru.magnit.magreportbackend.exception.InvalidParametersException;
 import ru.magnit.magreportbackend.exception.PermissionDeniedException;
 import ru.magnit.magreportbackend.exception.ReportExportException;
@@ -48,10 +55,15 @@ import ru.magnit.magreportbackend.service.domain.TokenService;
 import ru.magnit.magreportbackend.service.domain.UserDomainService;
 
 import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
+import static ru.magnit.magreportbackend.domain.reportjob.ReportJobStatusEnum.PENDING_DB_CONNECTION;
+import static ru.magnit.magreportbackend.domain.reportjob.ReportJobStatusEnum.RUNNING;
+import static ru.magnit.magreportbackend.domain.user.SystemRoles.ADMIN;
 import static ru.magnit.magreportbackend.domain.user.SystemRoles.UNBOUNDED_JOB_ACCESS;
 
 @Slf4j
@@ -150,6 +162,7 @@ public class ReportJobService {
             throw new PermissionDeniedException("У Вас нет прав на выполнение отчета <" + report.getName() + ">, id:" + report.getId());
         }
 
+        updateCurrentLoginFilter(request, report);
         stripEmptyFilters(request);
         checkMandatoryFilters(request, report);
         checkDateParameters(request, report);
@@ -279,29 +292,43 @@ public class ReportJobService {
                 });
     }
 
+    private void updateCurrentLoginFilter(ReportJobAddRequest request, ReportResponse report) {
+
+        final var filter = report.getAllFilters().stream().filter(f -> f.type().equals(FilterTypeEnum.CURRENT_LOGIN)).findFirst();
+
+        if (filter.isPresent()) {
+            var fieldId = filter.get().fields().stream().filter(f -> f.type().equals(FilterFieldTypeEnum.CODE_FIELD)).map(FilterReportFieldResponse::id).findFirst().orElseThrow();
+            var login = userDomainService.getCurrentUser().getName();
+            request.getParameters().forEach(p -> {
+                if (p.getFilterId().equals(filter.get().id())) {
+                    p.getParameters().add(new Tuple().setValues(Collections.singletonList(new TupleValue().setFieldId(fieldId).setValue(login))));
+                }
+            });
+        }
+    }
+
     public ReportJobResponse getJob(ReportJobRequest request) {
-        if (request.getJobId() != null) {
+
             var response = jobDomainService.getJob(request.getJobId());
+
+            if (response.getStatus().equals(RUNNING) || response.getStatus().equals(PENDING_DB_CONNECTION))
+                return response;
+
             var currentUser = userDomainService.getCurrentUser();
             checkAccessForJob(response.getId(), response.getReport().id(), response.getReport().name());
             response.setCanExecute(checkReportPermission(response.getReport().id()));
             response.setOlapLastUserChoice(olapUserChoiceDomainService.getOlapUserChoice(response.getReport().id(), currentUser.getId()));
             response.setExcelRowLimit(excelRowLimit);
             return response;
-        } else {
-            var user = userDomainService.getCurrentUser();
-            log.warn(String.format("JobId is null! User: %s/%s", user.getDomain().name(), user.getName()));
-            return null;
-        }
     }
 
     public ReportJobResponse getJob(Long jobId) {
-      return jobDomainService.getJob(jobId);
+        return jobDomainService.getJob(jobId);
     }
 
     public List<ReportJobResponse> getMyJobs(ReportJobHistoryRequestFilter filter) {
         var currentUser = userDomainService.getCurrentUser();
-        var responses = applyFilter(jobDomainService.getMyJobs(), filter) ;
+        var responses = applyFilter(jobDomainService.getMyJobs(), filter);
         responses.forEach(response -> {
             response.setCanExecute(checkReportPermission(response.getReport().id()));
             response.setOlapLastUserChoice(olapUserChoiceDomainService.getOlapUserChoice(response.getReport().id(), currentUser.getId()));
@@ -310,10 +337,10 @@ public class ReportJobService {
             response.setCountShareUsers(users.size());
             response.setShareUsers(users.size() > 11 ? users.subList(0, 10) : users);
         });
-        return responses ;
+        return responses;
     }
 
-    public List<ReportJobResponse>   getAllJobs(ReportJobHistoryRequestFilter filter) {
+    public List<ReportJobResponse> getAllJobs(ReportJobHistoryRequestFilter filter) {
         var responses = applyFilter(jobDomainService.getAllJobs(), filter);
         responses.forEach(response -> {
 
@@ -365,19 +392,50 @@ public class ReportJobService {
         return jobDomainService.getJobMetaData(request.getJobId());
     }
 
-    public void shareJob(ReportJobShareRequest request) {
+    public String shareJob(ReportJobShareRequest request) {
 
         var currentUser = userDomainService.getCurrentUser();
         var job = jobDomainService.getJob(request.getJobId());
+
+        var userWithoutPermissions = new ArrayList<UserResponse>();
+
+        var userRoleIds =
+                folderDomainService
+                        .getPublishedReports(new ReportIdRequest().setId(job.getReport().id()))
+                        .getFolders()
+                        .stream()
+                        .map(f -> folderPermissionsDomainService.getFolderReportPermissions(f.folder().id()))
+                        .flatMap(f -> f.rolePermissions().stream())
+                        .filter(r -> !r.permissions().contains(FolderAuthorityEnum.NONE))
+                        .map(r -> r.role().getId())
+                        .toList();
+
         if (job.getUser().name().equals(currentUser.getName())) {
-            var users = request.getUsers().stream().map(u -> userDomainService.getUserResponse(u.getUserName(), u.getDomain())).toList();
+            var users = request.getUsers().stream().map(u -> userDomainService.getUserResponse(u.getUserName(), u.getDomain())).collect(Collectors.toList());
+
+            users.forEach(u -> {
+                var roles = u.getRoles()
+                        .stream()
+                        .map(RoleResponse::getId)
+                        .filter(r ->  r.equals(ADMIN.getId()) || userRoleIds.contains(r))
+                        .toList();
+
+                if (roles.isEmpty()) userWithoutPermissions.add(u);
+            });
+
+            users.removeAll(userWithoutPermissions);
+
             reportJobUserDomainService.addUsersJob(ReportJobUserTypeEnum.SHARE, request.getJobId(), users);
             olapConfigurationDomainService.createCurrentConfigurationForUsers(users.stream().map(UserResponse::getId).toList(), request.getJobId(), currentUser.getId());
-        } else {
+        } else
             throw new InvalidParametersException("Only the author can share the task");
-        }
 
         jobDomainService.updateJobStats(request.getJobId(), false, false, true);
+
+        if (userWithoutPermissions.isEmpty())
+            return "Job share success";
+        else
+            return "Permission denied for users: " + userWithoutPermissions.stream().map(UserResponse::getName).collect(Collectors.joining(","));
 
     }
 
@@ -397,7 +455,11 @@ public class ReportJobService {
 
     @SuppressWarnings("java:S3776")
     private boolean isConformToFilter(ReportJobResponse source, ReportJobHistoryRequestFilter filter) {
-        if (filter.getFrom() == null && filter.getTo() == null && (filter.getStatuses() == null || filter.getStatuses().isEmpty()) && (filter.getUsers() == null || filter.getUsers().isEmpty()))
+        if ( filter.getFrom() == null && filter.getTo() == null &&
+                (filter.getStatuses() == null || filter.getStatuses().isEmpty()) &&
+                (filter.getUsers() == null || filter.getUsers().isEmpty()) &&
+                (filter.getReportIds() == null || filter.getReportIds().isEmpty())
+        )
             return true;
         var result = filter.getFrom() == null || (filter.getFrom().isBefore(source.getCreated()) || filter.getFrom().isEqual(source.getCreated()));
         if (filter.getTo() != null && !(filter.getTo().isAfter(source.getCreated()) || filter.getTo().isEqual(source.getCreated())))
